#13 Implement JSON - XDS to JSON Schema Definition
Signed-off-by: jnicolas <jean-loup.nicolas@excelian.com>